# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import storageRouter from "./storage";
+import meRouter from "./me";
+import teamRouter from "./team";
+import projectRouter from "./project";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(storageRouter);
+router.use(meRouter);
+router.use(teamRouter);
+router.use(projectRouter);
 
 export default router;
